Fix some colors; add in the action button to profiles. Fix spacing on bottom video scrollbar.

--- a/app/assets/stylesheets/youstars.css.scss
+++ b/app/assets/stylesheets/youstars.css.scss
@@ -136,7 +136,7 @@ p {}
 
 
 
-#ys-page {
+#ys-app {
 	display: block;
 	width: 100%;
 	height: 100%;
@@ -191,15 +191,18 @@ p {}
 				width: 45px;
 				height: 45px;
 			}
+			a:hover {
+				@include opacity(0.75);
+			}
 		}
 		li:nth-child(1) { background: $orange; }
 		li:nth-child(2) { background: $green; }
-		li:nth-child(3) { background: $crimson; }
-		li:nth-child(4) { background: $marigold; }
-		li:nth-child(5) { background: $aqua; }
-		li:nth-child(6) { background: $red; }
-		li:nth-child(7) { background: $blue; }
-		li:nth-child(8) { background: $purple; }
+		li:nth-child(3) { background: $marigold; }
+		li:nth-child(4) { background: $aqua; }
+		li:nth-child(5) { background: $red; }
+		li:nth-child(6) { background: $blue; }
+		li:nth-child(7) { background: $purple; }
+		li:nth-child(8) { background: $crimson; }
 		li:nth-child(9) { background: $teal; }
 	}
 }
@@ -218,6 +221,15 @@ p {}
 	height: 3px;
 	background: #fcc6d0;
 }
+
+
+
+#ys-page {
+	display: block;
+	float: left;
+}
+
+
 
 #ys-stats {
 	display: block;
@@ -270,13 +282,12 @@ $ys-profile-tile-large-size:	230px;
 		padding: 10px 0 0 10px;
 		li:nth-child(1n) a.ys-profile-tile-content { background: $orange; }
 		li:nth-child(2n) a.ys-profile-tile-content { background: $green; }
-		li:nth-child(3n) a.ys-profile-tile-content { background: $crimson; }
-		li:nth-child(4n) a.ys-profile-tile-content { background: $marigold; }
-		li:nth-child(5n) a.ys-profile-tile-content { background: $aqua; }
-		li:nth-child(6n) a.ys-profile-tile-content { background: $red; }
-		li:nth-child(7n) a.ys-profile-tile-content { background: $blue; }
-		li:nth-child(8n) a.ys-profile-tile-content { background: $purple; }
-		li:nth-child(9n) a.ys-profile-tile-content { background: $teal; }
+		li:nth-child(3n) a.ys-profile-tile-content { background: $marigold; }
+		li:nth-child(4n) a.ys-profile-tile-content { background: $aqua; }
+		li:nth-child(5n) a.ys-profile-tile-content { background: $red; }
+		li:nth-child(6n) a.ys-profile-tile-content { background: $blue; }
+		li:nth-child(7n) a.ys-profile-tile-content { background: $purple; }
+		li:nth-child(8n) a.ys-profile-tile-content { background: $teal; }
 		li.ys-profile-tile-small,
 		li.ys-profile-tile-medium,
 		li.ys-profile-tile-large {
@@ -285,6 +296,19 @@ $ys-profile-tile-large-size:	230px;
 			width: $ys-profile-tile-large-size;
 			height: $ys-profile-tile-large-size;
 			margin: 0 10px 10px 0;
+			a.ys-profile-action {
+				display: block;
+				float: right;
+				width: 23px;
+				height: 23px;
+				margin: 2px 2px 0 0;
+				background: $crimson;
+				position: relative;
+				z-index: 50;
+			}
+			a.ys-profile-action:hover {
+				@include opacity(0.75);
+			}
 			a.ys-profile-tile-content {
 				display: block;
 				float: left;
@@ -293,6 +317,7 @@ $ys-profile-tile-large-size:	230px;
 				color: #ffffff;
 				position: absolute;
 				overflow: hidden;
+				z-index: 25;
 				.ys-profile-tile-info {
 					display: block;
 					float: left;
@@ -518,21 +543,22 @@ $ys-profile-tile-large-size:	230px;
 		display: block;
 		width: auto;
 		height: 125px;
+		padding: 0 3px;
 		white-space: nowrap;
 		li:nth-child(1n) a.ys-video-info { background: $orange; }
 		li:nth-child(2n) a.ys-video-info { background: $green; }
-		li:nth-child(3n) a.ys-video-info { background: $crimson; }
-		li:nth-child(4n) a.ys-video-info { background: $marigold; }
-		li:nth-child(5n) a.ys-video-info { background: $aqua; }
-		li:nth-child(6n) a.ys-video-info { background: $red; }
-		li:nth-child(7n) a.ys-video-info { background: $blue; }
+		li:nth-child(3n) a.ys-video-info { background: $marigold; }
+		li:nth-child(4n) a.ys-video-info { background: $aqua; }
+		li:nth-child(5n) a.ys-video-info { background: $red; }
+		li:nth-child(6n) a.ys-video-info { background: $blue; }
+		li:nth-child(7n) a.ys-video-info { background: $crimson; }
 		li:nth-child(8n) a.ys-video-info { background: $purple; }
 		li:nth-child(9n) a.ys-video-info { background: $teal; }
 		li.ys-video-tile {
 			display: inline-block;
 			width: 240px;
 			height: 135px;
-			margin: 0 7px 0 0;
+			margin: 0 0 0 7px;
 			white-space: normal;
 			position: relative;
 			@include transition-property(margin, bottom);
